[gd_scene load_steps=4 format=3 uid="uid://hsbka7hhhfdl"]

[ext_resource type="Script" uid="uid://qfn15brs5d63" path="res://Scripts/ui/upgrade_card.gd" id="1_0dsk3"]
[ext_resource type="Theme" uid="uid://c0r8e3ecqnmxp" path="res://Art/HUD-UI/Tema.tres" id="1_l7ayb"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_l7ayb"]
color = Color(0.5686275, 0.17254902, 0.7529412, 1)
grow_begin = 48.0
grow_end = 45.0
thickness = 9

[node name="UpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(500, 400)
offset_right = 389.7375
offset_bottom = 591.2853
theme = ExtResource("1_l7ayb")
script = ExtResource("1_0dsk3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 28

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_l7ayb")

[node name="AbilityNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nome da Habilidade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_l7ayb")

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Aqui vai a longa descrição do que este upgrade maravilhoso faz pelo jogador."
autowrap_mode = 2

[node name="ChooseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Escolher
"
